QtBeef/src/Qt/qabstractscrollarea.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QAbstractScrollArea
// --------------------------------------------------------------
[CRepr]
struct QAbstractScrollArea_Ptr: void
{
}
extension CQt
{
	[LinkName("QAbstractScrollArea_new")]
	public static extern QAbstractScrollArea_Ptr* QAbstractScrollArea_new(QWidget_Ptr* parent);
	[LinkName("QAbstractScrollArea_new2")]
	public static extern QAbstractScrollArea_Ptr* QAbstractScrollArea_new2();
	[LinkName("QAbstractScrollArea_Delete")]
	public static extern void QAbstractScrollArea_Delete(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_MetaObject")]
	public static extern QMetaObject_Ptr* QAbstractScrollArea_MetaObject(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_Qt_Metacast")]
	public static extern void* QAbstractScrollArea_Qt_Metacast(QAbstractScrollArea_Ptr* self, c_char* param1);
	[LinkName("QAbstractScrollArea_Qt_Metacall")]
	public static extern c_int QAbstractScrollArea_Qt_Metacall(QAbstractScrollArea_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QAbstractScrollArea_Tr")]
	public static extern libqt_string QAbstractScrollArea_Tr(c_char* s);
	[LinkName("QAbstractScrollArea_VerticalScrollBarPolicy")]
	public static extern Qt_ScrollBarPolicy QAbstractScrollArea_VerticalScrollBarPolicy(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetVerticalScrollBarPolicy")]
	public static extern void QAbstractScrollArea_SetVerticalScrollBarPolicy(QAbstractScrollArea_Ptr* self, Qt_ScrollBarPolicy verticalScrollBarPolicy);
	[LinkName("QAbstractScrollArea_VerticalScrollBar")]
	public static extern QScrollBar_Ptr* QAbstractScrollArea_VerticalScrollBar(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetVerticalScrollBar")]
	public static extern void QAbstractScrollArea_SetVerticalScrollBar(QAbstractScrollArea_Ptr* self, QScrollBar_Ptr* scrollbar);
	[LinkName("QAbstractScrollArea_HorizontalScrollBarPolicy")]
	public static extern Qt_ScrollBarPolicy QAbstractScrollArea_HorizontalScrollBarPolicy(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetHorizontalScrollBarPolicy")]
	public static extern void QAbstractScrollArea_SetHorizontalScrollBarPolicy(QAbstractScrollArea_Ptr* self, Qt_ScrollBarPolicy horizontalScrollBarPolicy);
	[LinkName("QAbstractScrollArea_HorizontalScrollBar")]
	public static extern QScrollBar_Ptr* QAbstractScrollArea_HorizontalScrollBar(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetHorizontalScrollBar")]
	public static extern void QAbstractScrollArea_SetHorizontalScrollBar(QAbstractScrollArea_Ptr* self, QScrollBar_Ptr* scrollbar);
	[LinkName("QAbstractScrollArea_CornerWidget")]
	public static extern QWidget_Ptr* QAbstractScrollArea_CornerWidget(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetCornerWidget")]
	public static extern void QAbstractScrollArea_SetCornerWidget(QAbstractScrollArea_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QAbstractScrollArea_AddScrollBarWidget")]
	public static extern void QAbstractScrollArea_AddScrollBarWidget(QAbstractScrollArea_Ptr* self, QWidget_Ptr* widget, void* alignment);
	[LinkName("QAbstractScrollArea_ScrollBarWidgets")]
	public static extern void* QAbstractScrollArea_ScrollBarWidgets(QAbstractScrollArea_Ptr* self, void* alignment);
	[LinkName("QAbstractScrollArea_Viewport")]
	public static extern QWidget_Ptr* QAbstractScrollArea_Viewport(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetViewport")]
	public static extern void QAbstractScrollArea_SetViewport(QAbstractScrollArea_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QAbstractScrollArea_MaximumViewportSize")]
	public static extern QSize_Ptr QAbstractScrollArea_MaximumViewportSize(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_MinimumSizeHint")]
	public static extern QSize_Ptr QAbstractScrollArea_MinimumSizeHint(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SizeHint")]
	public static extern QSize_Ptr QAbstractScrollArea_SizeHint(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetupViewport")]
	public static extern void QAbstractScrollArea_SetupViewport(QAbstractScrollArea_Ptr* self, QWidget_Ptr* viewport);
	[LinkName("QAbstractScrollArea_SizeAdjustPolicy")]
	public static extern QAbstractScrollArea_SizeAdjustPolicy QAbstractScrollArea_SizeAdjustPolicy(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_SetSizeAdjustPolicy")]
	public static extern void QAbstractScrollArea_SetSizeAdjustPolicy(QAbstractScrollArea_Ptr* self, QAbstractScrollArea_SizeAdjustPolicy policy);
	[LinkName("QAbstractScrollArea_SetViewportMargins")]
	public static extern void QAbstractScrollArea_SetViewportMargins(QAbstractScrollArea_Ptr* self, c_int left, c_int top, c_int right, c_int bottom);
	[LinkName("QAbstractScrollArea_SetViewportMargins2")]
	public static extern void QAbstractScrollArea_SetViewportMargins2(QAbstractScrollArea_Ptr* self, QMargins_Ptr* margins);
	[LinkName("QAbstractScrollArea_ViewportMargins")]
	public static extern QMargins_Ptr QAbstractScrollArea_ViewportMargins(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_EventFilter")]
	public static extern bool QAbstractScrollArea_EventFilter(QAbstractScrollArea_Ptr* self, QObject_Ptr* param1, QEvent_Ptr* param2);
	[LinkName("QAbstractScrollArea_Event")]
	public static extern bool QAbstractScrollArea_Event(QAbstractScrollArea_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_ViewportEvent")]
	public static extern bool QAbstractScrollArea_ViewportEvent(QAbstractScrollArea_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_ResizeEvent")]
	public static extern void QAbstractScrollArea_ResizeEvent(QAbstractScrollArea_Ptr* self, QResizeEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_PaintEvent")]
	public static extern void QAbstractScrollArea_PaintEvent(QAbstractScrollArea_Ptr* self, QPaintEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_MousePressEvent")]
	public static extern void QAbstractScrollArea_MousePressEvent(QAbstractScrollArea_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_MouseReleaseEvent")]
	public static extern void QAbstractScrollArea_MouseReleaseEvent(QAbstractScrollArea_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_MouseDoubleClickEvent")]
	public static extern void QAbstractScrollArea_MouseDoubleClickEvent(QAbstractScrollArea_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_MouseMoveEvent")]
	public static extern void QAbstractScrollArea_MouseMoveEvent(QAbstractScrollArea_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_WheelEvent")]
	public static extern void QAbstractScrollArea_WheelEvent(QAbstractScrollArea_Ptr* self, QWheelEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_ContextMenuEvent")]
	public static extern void QAbstractScrollArea_ContextMenuEvent(QAbstractScrollArea_Ptr* self, QContextMenuEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_DragEnterEvent")]
	public static extern void QAbstractScrollArea_DragEnterEvent(QAbstractScrollArea_Ptr* self, QDragEnterEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_DragMoveEvent")]
	public static extern void QAbstractScrollArea_DragMoveEvent(QAbstractScrollArea_Ptr* self, QDragMoveEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_DragLeaveEvent")]
	public static extern void QAbstractScrollArea_DragLeaveEvent(QAbstractScrollArea_Ptr* self, QDragLeaveEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_DropEvent")]
	public static extern void QAbstractScrollArea_DropEvent(QAbstractScrollArea_Ptr* self, QDropEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_KeyPressEvent")]
	public static extern void QAbstractScrollArea_KeyPressEvent(QAbstractScrollArea_Ptr* self, QKeyEvent_Ptr* param1);
	[LinkName("QAbstractScrollArea_ScrollContentsBy")]
	public static extern void QAbstractScrollArea_ScrollContentsBy(QAbstractScrollArea_Ptr* self, c_int dx, c_int dy);
	[LinkName("QAbstractScrollArea_ViewportSizeHint")]
	public static extern QSize_Ptr QAbstractScrollArea_ViewportSizeHint(QAbstractScrollArea_Ptr* self);
	[LinkName("QAbstractScrollArea_Tr2")]
	public static extern libqt_string QAbstractScrollArea_Tr2(c_char* s, c_char* c);
	[LinkName("QAbstractScrollArea_Tr3")]
	public static extern libqt_string QAbstractScrollArea_Tr3(c_char* s, c_char* c, c_int n);
}
